--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
           java-version: "11"
       - name: Install Playwright Browsers
         run: npx playwright install
+          npx playwright install-deps
       - name: Run tests
         run: npm test
 
