--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,54 +1,66 @@
-name: CI
+name: Playwright Tests
 
 on:
   push:
-    branches:
-      - main
+    branches: [gh-actions, master]
   pull_request:
-    branches:
-      - main
+    branches: [gh-actions, master]
 
 jobs:
-  build:
+  playwright:
+    name: "Playwright Tests"
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        if: always()
+        continue-on-error: true
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version: 18
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install dependencies (npm ci or npm install)
+        run: |
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            echo "package-lock.json not found, running npm install instead"
+            npm install
+          fi
 
-      - name: Set up Java
-        uses: actions/setup-java@v2
+      - name: Run your tests
+        run: npx playwright test
+        continue-on-error: true
+
+      - name: Get Allure history
+        uses: actions/checkout@v4
+        if: always()
+        continue-on-error: true
         with:
-          distribution: "adopt"
-          java-version: "11"
-      - name: Install Playwright Deps
-        run: npx playwright install-deps
-      - name: Install Playwright Browsers
-        run: npx playwright install
+          ref: gh-pages
+          path: gh-pages
 
-      - name: Run tests
-        run: npm test
-
-      - name: Generate Allure report
-        run: npm run allure:generate
-          npm run allure:report
-
-      - name: Publish Allure report
-        uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v3
         with:
-          name: allure-report
-          path: allure-report
+          name: allure-results
+          path: allure-results
+          retention-days: 20
 
-      - name: Deploy to GitHub Pages
+      - name: Allure Report with history
+        uses: simple-elf/allure-report-action@v1.8
+        if: always()
+        with:
+          allure_results: allure-results
+          gh_pages: gh-pages
+          allure_report: allure-report
+          allure_history: allure-history
+
+      - name: Deploy report to Github Pages
+        if: always()
         uses: peaceiris/actions-gh-pages@v3
+        env:
+          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./allure-report
+          publish_dir: allure-history
+          keep_files: true
