--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,66 +1,52 @@
-name: Playwright Tests
+name: CI
 
 on:
   push:
-    branches: [gh-actions, master]
+    branches:
+      - main
   pull_request:
-    branches: [gh-actions, master]
+    branches:
+      - main
 
 jobs:
-  playwright:
-    name: "Playwright Tests"
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-        if: always()
-        continue-on-error: true
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 18
-
-      - name: Install dependencies (npm ci or npm install)
-        run: |
-          if [ -f package-lock.json ]; then
-            npm ci
-          else
-            echo "package-lock.json not found, running npm install instead"
-            npm install
-          fi
-
-      - name: Run your tests
-        run: npx playwright test
-        continue-on-error: true
-
-      - name: Get Allure history
+      - name: Checkout code
         uses: actions/checkout@v4
-        if: always()
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
 
-      - uses: actions/upload-artifact@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-          name: allure-results
-          path: allure-results
-          retention-days: 20
+          node-version: lts/*
 
-      - name: Allure Report with history
-        uses: simple-elf/allure-report-action@v1.8
-        if: always()
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Set up Java
+        uses: actions/setup-java@v2
         with:
-          allure_results: allure-results
-          gh_pages: gh-pages
-          allure_report: allure-report
-          allure_history: allure-history
+          distribution: "adopt"
+          java-version: "11"
+      - name: Install Playwright Deps
+        run: npx playwright install --with-deps
 
-      - name: Deploy report to Github Pages
-        if: always()
+      - name: Run tests
+        run: npx playwright test
+
+      - name: Generate Allure report
+        run: npm run allure:generate
+          npm run allure:report
+
+      - name: Publish Allure report
+        uses: actions/upload-artifact@v3
+        with:
+          name: allure-report
+          path: allure-report
+
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
-        env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          publish_dir: allure-history
-          keep_files: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./allure-report
