--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,16 +9,15 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
       - name: Install dependencies
-        run: npm install
-      - name: Run Playwright tests
-        uses: playwright/github-action@v4
-        with:
-          playwright-version: "1.25.0"
-          browser: chromium
-          headless: true
+        run: npm ci
+      - name: Install playwright browsers
+        run: npx playwright install --with-deps
+      - name: Run tests
+        run: npx playwright test
+
       - name: Generate Allure report
         uses: allure/github-action@v4
         with:
