--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-      - uses: microsoft/playwright-github-action@v1
       - name: Install dependencies
         run: npm ci
       - name: Install playwright browsers
-        run: npx playwright install --with-deps
+        run: npx playwright install-deps chromium
       - name: Run tests
         run: npx playwright test
