--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,5 +15,6 @@ jobs:
         run: npm ci
       - name: Install playwright browsers
         run: npx playwright install-deps chromium
+          npx playwright install
       - name: Run tests
         run: npx playwright test
