--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Install playwright browsers
-        run: npx playwright install-deps chromium
+        run: npx playwright install-deps firefox
       - name: install nav
         run: npx playwright install
       - name: Run tests
