--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,27 @@
-name: Playwright Tests with Allure Report
-
+name: Playwright Tests
 on:
   push:
-    branches:
-      - main
-
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
 jobs:
   test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
       - name: Install dependencies
         run: npm ci
-      - name: Install playwright browsers
-        run: npx playwright install-deps firefox
-      - name: install nav
-        run: npx playwright install
-      - name: Run tests
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
         run: npx playwright test
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
