--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Setup Playwright
-        uses: playwright/github-action@v2
+      - name: Install dependencies
+        run: npm install
+      - name: Install Playwright
+        run: npm install --save-dev playwright@1.48
       - name: Run Playwright tests
         run: npx playwright test
