--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Install Playwright
-        run: npm install --save-dev playwright@1.48
+        run: npm install playwright@1.48
+      - name: navegator
+        run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: npx playwright test
