--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Install dependencies
         run: npm install
+      - name: browser
+        run: npx playwright install
       - name: Run Playwright tests
         run: npm run test
