--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,11 +9,18 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Install dependencies
-        run: npm install
-      - name: browser
-        run: npx playwright install
+        run: npm ci
+      - name: Install Playwright
+        run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: npm run test
+        run: npx playwright test
+      - uses: actions/upload-artifact@v3
+        if: ${{ failure() }}
+        with:
+          name: playwright-report
+          path: tests/web-application/playwright-report
