--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,27 @@
 name: Playwright Tests
-
 on:
   push:
-    branches:
-      - main
-
+    branches: [main, master]
+  pull_request:
+    branches: [main, master]
 jobs:
-  test:
+  test_ui:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: lts/*
       - name: Install dependencies
         run: npm ci
-      - name: Install Playwright
+      - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: npx playwright test
-      - uses: actions/upload-artifact@v3
-        if: ${{ failure() }}
+        run: xvfb-run npx playwright test --grep @UI
+      - uses: actions/upload-artifact@v4
+        if: always()
         with:
-          name: playwright-report
-          path: tests/web-application/playwright-report
+          name: playwright-report-ui
+          path: playwright-report/
+          retention-days: 30
