--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,10 @@ name: Playwright Tests
 on:
   schedule:
     - cron: "0 23 * * 1-5" # Programa las ejecuciones a las 23:00 UTC de lunes a viernes
+  push:
+    branches: [gh-actions, master]
+  pull_request:
+    branches: [gh-actions, master]
 
 jobs:
   playwright:
@@ -23,19 +27,14 @@ jobs:
 
       - name: Run tests
         run: npm run test
-        working-directory: tests
 
       - name: Generate Allure report
-        uses: simple-elf/allure-report-action@v1.8
-        with:
-          allure_results: allure/result
-          allure_report: allure/report
-          allure_history: allure/history
+        run: npm run allure:generate
 
-      - name: Deploy report to GitHub Pages
+      - name: Publish Allure report
         uses: peaceiris/actions-gh-pages@v3
         env:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          publish_dir: ./e2e-tests/allure-history
+          publish_dir: ./allure/report
           keep_files: true
