--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Playwright Tests
 
 on:
   schedule:
-    - cron: "0 23 * * 1-5" # Programa las ejecuciones a las 23:00 UTC de lunes a viernes
+    - cron: "0 23 * * 1-5" # Ejecuta a las 23:00 UTC de lunes a viernes
   push:
     branches: [gh-actions, master]
   pull_request:
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: "lts/*"
 
       - name: Install dependencies
         run: npm ci
@@ -31,10 +31,17 @@ jobs:
       - name: Generate Allure report
         run: npm run allure:generate
 
-      - name: Publish Allure report
+      - name: Upload Allure results
+        uses: actions/upload-artifact@v3
+        with:
+          name: allure-results
+          path: allure/report
+          retention-days: 5
+
+      - name: Deploy report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         env:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          publish_dir: ./allure/report
+          publish_dir: allure/report
           keep_files: true
