--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,47 +1,27 @@
 name: Playwright Tests
-
 on:
-  schedule:
-    - cron: "0 23 * * 1-5" # Ejecuta a las 23:00 UTC de lunes a viernes
   push:
-    branches: [gh-actions, master]
+    branches: [main, master]
   pull_request:
-    branches: [gh-actions, master]
-
+    branches: [main, master]
 jobs:
-  playwright:
-    name: "Playwright Tests"
+  test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: "lts/*"
-
+          node-version: lts/*
       - name: Install dependencies
         run: npm ci
-
-      - name: Run tests
-        run: npm run test
-
-      - name: Generate Allure report
-        run: npm run allure:generate
-
-      - name: Upload Allure results
-        uses: actions/upload-artifact@v3
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npx playwright test
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
         with:
-          name: allure-results
-          path: allure/report
-          retention-days: 5
-
-      - name: Deploy report to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          publish_dir: allure/report
-          keep_files: true
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
