--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: DEBUG=pw:api npx playwright test --reporter=dot
 
       - name: Generate Allure report
-        run: DEBUG=pw:api npx allure generate allure/result -o allure/report --clean --reporter=dot
+        run: npx allure generate allure/result -o allure/report --clean
 
       - name: Upload Allure results
         uses: actions/upload-artifact@v3
