--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,18 +15,20 @@ jobs:
           node-version: lts/*
       - name: Install dependencies
         run: npm ci
-      - name: Install Java
+      - name: Install Java 8
         uses: actions/setup-java@v3
         with:
-          distribution: "temurin"
-          java-version: "11"
+          distribution: "adopt"
+          java-version: "8"
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: DEBUG=pw:api npx playwright test --reporter=dot
-
       - name: Generate Allure report
-        run: npx allure generate allure/result -o allure/report --clean
+        run: |
+          npm run allure:generate
+        env:
+          JAVA_HOME: /opt/hostedtoolcache/Java_Adopt_jdk/8.0.292-10/x64
 
       - name: Upload Allure results
         uses: actions/upload-artifact@v3
