--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,14 +19,16 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: "adopt"
-          java-version: "8"
+          java-version: "8.0.292"
+
+      - name: Verify Java installation
+        run: java -version
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: DEBUG=pw:api npx playwright test --reporter=dot
       - name: Generate Allure report
-        run: |
-          npm run allure:generate
+        run: npm run allure:generate
         env:
           JAVA_HOME: /opt/hostedtoolcache/Java_Adopt_jdk/8.0.292-10/x64
 
